# Scion2D

./: CMakeLists.txt  README.md
SCION_CORE/: CMakeLists.txt  README.md
SCION_CORE/include/Core/CoreUtilities/: Prefab.h
SCION_CORE/src/CoreUtilities/: Prefab.cpp  ProjectInfo.cpp
SCION_CORE/src/ECS/: MainRegistry.cpp  Registry.cpp
SCION_CORE/src/Profiling/: ProfileCollector.cpp
SCION_CORE/src/Resources/: AssetManager.cpp
SCION_CORE/src/Scripting/: InputManager.cpp  SoundBindings.cpp
SCION_CORE/src/Systems/: AnimationSystem.cpp  RenderSystem.cpp  ScriptingSystem.cpp
SCION_EDITOR/: README.md
SCION_EDITOR/src/: Application.cpp  Application.h
SCION_ENGINE/: README.md
SCION_ENGINE/src/: Runtime.cpp  Runtime.h
SCION_FILESYSTEM/: README.md
SCION_PHYSICS/: CMakeLists.txt  README.md
SCION_RENDERING/: README.md
SCION_RENDERING/src/: FontLoader.cpp  ShaderLoader.cpp  TextBatchRenderer.cpp  TextureLoader.cpp
SCION_SOUNDS/: CMakeLists.txt  README.md
SCION_SOUNDS/include/Sounds/AudioPlayer/: AudioPlayer.hpp
SCION_SOUNDS/include/Sounds/Essentials/: Audio.hpp  Utilities.hpp
SCION_SOUNDS/src/: Audio.cpp  AudioPlayer.cpp  Utilities.cpp
SCION_UTILITIES/: CMakeLists.txt  README.md
SCION_UTILITIES/include/ScionUtilities/: SDL_Wrappers.h
SCION_UTILITIES/src/: SDL_Wrappers.cpp
SCION_WINDOW/: README.md
SCION_WINDOW/src/: Gamepad.cpp  Mouse.cpp  Window.cpp
cmake/: CompilerSettings.cmake  SDL3_mixer.cmake  TracyProfiler.cmake  imgui.cmake
crash_reporter/: CMakeLists.txt  README.md
crash_reporter/src/: main.cpp
shared_pch/: CMakeLists.txt
(+55 files in other folders)
